--- a/RiksdagsvoteringGetLinks.ipynb
+++ b/RiksdagsvoteringGetLinks.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "b0298836",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2021-12-03 03:14:46.779622\n"
+      "Last run:  2021-12-03 14:25:43.317258\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "5fd2d12f",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "id": "47120cd6",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "id": "3cee5ff6",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "1ef871a8",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "1ee7e02d",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "id": "f68ce38e",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "id": "ed81a390",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "id": "f5eea0fa",
    "metadata": {},
    "outputs": [
@@ -183,21 +183,20 @@
     }
    ],
    "source": [
-    "links = data[\"query\"][\"pages\"]\n",
-    "#print(\"links: \", type(links),\"\\t\",links.keys(),len(links['7623443'][\"links\"]))\n",
-    "print(\"Antal länkar: \\t\",len(links[list(links.keys())[0]][\"links\"]))"
+    "page = data[\"query\"][\"pages\"]\n",
+    "print(\"Antal länkar: \\t\",len(page[list(page.keys())[0]][\"links\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "id": "d8a54471",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77bb3829d8f64cd0aaa4d4cac8b3a3f6",
+       "model_id": "b1225a78d147485ca027f25836109d3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -992,7 +991,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tCenterpartiet\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tCenterpartiet\n"
      ]
     },
     {
@@ -2427,7 +2426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tKristdemokraterna (Sverige)\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tKristdemokraterna (Sverige)\n"
      ]
     },
     {
@@ -2626,7 +2625,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tLiberalerna\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tLiberalerna\n"
      ]
     },
     {
@@ -3341,8 +3340,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tMiljöpartiet\n",
-      "\t saknar GUID: \tModeraterna\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tMiljöpartiet\n",
+      "\t saknar Riksdagens GUID i Wikidata: \tModeraterna\n"
      ]
     },
     {
@@ -3505,7 +3504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tPartilös\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tPartilös\n"
      ]
     },
     {
@@ -3896,7 +3895,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tSocialdemokraterna (Sverige)\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tSocialdemokraterna (Sverige)\n"
      ]
     },
     {
@@ -4023,7 +4022,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tSverigedemokraterna\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tSverigedemokraterna\n"
      ]
     },
     {
@@ -4234,7 +4233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tVänsterpartiet\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tVänsterpartiet\n"
      ]
     },
     {
@@ -4349,7 +4348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t saknar GUID: \tMall:Centerpartiet/meta/färg\n"
+      "\t saknar Riksdagens GUID i Wikidata: \tMall:Centerpartiet/meta/färg\n"
      ]
     }
    ],
@@ -4363,7 +4362,7 @@
     "urlriksdata = \"data.riksdagen.se/personlista/?utformat=json&iid=\"\n",
     "\n",
     "linknr = 0\n",
-    "for link in tqdm(links[list(links.keys())[0]][\"links\"]):\n",
+    "for link in tqdm(page[list(page.keys())[0]][\"links\"]):\n",
     "    #print(link[\"title\"])\n",
     "    svName = link[\"title\"]\n",
     "    wdQnumber = getWD (svName)\n",
@@ -4378,7 +4377,7 @@
     "                + \" - <a href=\"+riksUrl+\">Riksdagen</a> \" \\\n",
     "                + \"<a href=\"+riksData+\">json</a>\"))\n",
     "    else:\n",
-    "        print (\"\\t saknar GUID: \\t\" + svName) \n",
+    "        print (\"\\t saknar Riksdagens GUID i Wikidata: \\t\" + svName) \n",
     "               "
    ]
   },
