--- a/Riksdagens ledamöter status.ipynb
+++ b/Riksdagens ledamöter status.ipynb
@@ -7,7 +7,7 @@
     "## Riksdagen ledamöter - Swedish MP status\n",
     "version 1.2\n",
     "\n",
-    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledamöters%20status.ipynb)  \n",
+    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter%20status.ipynb)  \n",
     "  * [GITHUB Riksdagen](https://github.com/salgo60/Riksdagen)\n",
     "* [Sökfråga JSON](http://data.riksdagen.se/personlista/?rdlstatus=samtliga&utformat=json&termlista=)  1991 ledamöter\n",
     "\n",
