--- a/Riksdagens ledamöter status2.ipynb
+++ b/Riksdagens ledamöter status2.ipynb
@@ -7,6 +7,7 @@
     "## Riksdagens ledamöter - Swedish MP status 2\n",
     "\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter%20status2.ipynb)  \n",
+    "  * [Jupyter Notebook 1](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter%20status.ipynb)  \n",
     "  * [GITHUB Riksdagen](https://github.com/salgo60/Riksdagen)\n",
     "* [Sökfråga JSON](http://data.riksdagen.se/personlista/?rdlstatus=samtliga&utformat=json&termlista=)  1991 ledamöter\n",
     "  * verkar finnas en vy personlista som ger 349 ledamöter denna Notebook läser det datat\n",
