--- a/Riksdagens ledamöter status.ipynb
+++ b/Riksdagens ledamöter status.ipynb
@@ -15,7 +15,7 @@
     "    * [html tabell 349](http://data.riksdagen.se/personlista/?iid=&fnamn=&enamn=&f_ar=&kn=&parti=&valkrets=&org=&utformat=htmltabell)\n",
     "    * [json 349](http://data.riksdagen.se/personlista/?iid=&fnamn=&enamn=&f_ar=&kn=&parti=&valkrets=&org=&utformat=json)\n",
     "    * [Jupyter Notebook som läser detta data](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter%20status2.ipynb)\n",
-    "* [GITHUB question to user TMTMTM](https://github.com/every-politician-scrapers/sweden-riksdag-api-current/issues/4) what other countries do in Wikidata\n",
+    "* [GITHUB question to user TMTMTM](https://github.com/every-politician-scrapers/sweden-riksdag-api-current/issues/4) how this is managed in other countries and how we should do it in Wikidata\n",
     "\n",
     "Tanken att förstår hur Status i Riksdagens data fungerar. Kan vara ett enklare sätt att hitta dom 349 som är aktiva i Riksdagen\n",
     "\n",
