--- a/Riksdagens ledamöter status2.ipynb
+++ b/Riksdagens ledamöter status2.ipynb
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2022-01-19 23:39:50.925276\n"
+      "Last run:  2022-01-22 13:08:56.401288\n"
      ]
     }
    ],
@@ -4622,7 +4622,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_82775_\">\n",
+       "<table id=\"T_df944_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >status</th>\n",
@@ -4647,100 +4647,100 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row0\" class=\"row_heading level0 row0\" >-</th>\n",
-       "      <td id=\"T_82775_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row0_col1\" class=\"data row0 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row0_col2\" class=\"data row0 col2\" >0</td>\n",
-       "      <td id=\"T_82775_row0_col3\" class=\"data row0 col3\" >1</td>\n",
-       "      <td id=\"T_82775_row0_col4\" class=\"data row0 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row0_col5\" class=\"data row0 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row0_col6\" class=\"data row0 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row0\" class=\"row_heading level0 row0\" >-</th>\n",
+       "      <td id=\"T_df944_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row0_col1\" class=\"data row0 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row0_col2\" class=\"data row0 col2\" >0</td>\n",
+       "      <td id=\"T_df944_row0_col3\" class=\"data row0 col3\" >1</td>\n",
+       "      <td id=\"T_df944_row0_col4\" class=\"data row0 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row0_col5\" class=\"data row0 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row0_col6\" class=\"data row0 col6\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row1\" class=\"row_heading level0 row1\" >C</th>\n",
-       "      <td id=\"T_82775_row1_col0\" class=\"data row1 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row1_col1\" class=\"data row1 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row1_col2\" class=\"data row1 col2\" >0</td>\n",
-       "      <td id=\"T_82775_row1_col3\" class=\"data row1 col3\" >30</td>\n",
-       "      <td id=\"T_82775_row1_col4\" class=\"data row1 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row1_col5\" class=\"data row1 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row1_col6\" class=\"data row1 col6\" >1</td>\n",
+       "      <th id=\"T_df944_level0_row1\" class=\"row_heading level0 row1\" >C</th>\n",
+       "      <td id=\"T_df944_row1_col0\" class=\"data row1 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row1_col1\" class=\"data row1 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row1_col2\" class=\"data row1 col2\" >0</td>\n",
+       "      <td id=\"T_df944_row1_col3\" class=\"data row1 col3\" >30</td>\n",
+       "      <td id=\"T_df944_row1_col4\" class=\"data row1 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row1_col5\" class=\"data row1 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row1_col6\" class=\"data row1 col6\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row2\" class=\"row_heading level0 row2\" >KD</th>\n",
-       "      <td id=\"T_82775_row2_col0\" class=\"data row2 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row2_col1\" class=\"data row2 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row2_col2\" class=\"data row2 col2\" >1</td>\n",
-       "      <td id=\"T_82775_row2_col3\" class=\"data row2 col3\" >21</td>\n",
-       "      <td id=\"T_82775_row2_col4\" class=\"data row2 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row2_col5\" class=\"data row2 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row2_col6\" class=\"data row2 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row2\" class=\"row_heading level0 row2\" >KD</th>\n",
+       "      <td id=\"T_df944_row2_col0\" class=\"data row2 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row2_col1\" class=\"data row2 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row2_col2\" class=\"data row2 col2\" >1</td>\n",
+       "      <td id=\"T_df944_row2_col3\" class=\"data row2 col3\" >21</td>\n",
+       "      <td id=\"T_df944_row2_col4\" class=\"data row2 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row2_col5\" class=\"data row2 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row2_col6\" class=\"data row2 col6\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row3\" class=\"row_heading level0 row3\" >L</th>\n",
-       "      <td id=\"T_82775_row3_col0\" class=\"data row3 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row3_col1\" class=\"data row3 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row3_col2\" class=\"data row3 col2\" >0</td>\n",
-       "      <td id=\"T_82775_row3_col3\" class=\"data row3 col3\" >20</td>\n",
-       "      <td id=\"T_82775_row3_col4\" class=\"data row3 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row3_col5\" class=\"data row3 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row3_col6\" class=\"data row3 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row3\" class=\"row_heading level0 row3\" >L</th>\n",
+       "      <td id=\"T_df944_row3_col0\" class=\"data row3 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row3_col1\" class=\"data row3 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row3_col2\" class=\"data row3 col2\" >0</td>\n",
+       "      <td id=\"T_df944_row3_col3\" class=\"data row3 col3\" >20</td>\n",
+       "      <td id=\"T_df944_row3_col4\" class=\"data row3 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row3_col5\" class=\"data row3 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row3_col6\" class=\"data row3 col6\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row4\" class=\"row_heading level0 row4\" >M</th>\n",
-       "      <td id=\"T_82775_row4_col0\" class=\"data row4 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row4_col1\" class=\"data row4 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row4_col2\" class=\"data row4 col2\" >3</td>\n",
-       "      <td id=\"T_82775_row4_col3\" class=\"data row4 col3\" >66</td>\n",
-       "      <td id=\"T_82775_row4_col4\" class=\"data row4 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row4_col5\" class=\"data row4 col5\" >1</td>\n",
-       "      <td id=\"T_82775_row4_col6\" class=\"data row4 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row4\" class=\"row_heading level0 row4\" >M</th>\n",
+       "      <td id=\"T_df944_row4_col0\" class=\"data row4 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row4_col1\" class=\"data row4 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row4_col2\" class=\"data row4 col2\" >3</td>\n",
+       "      <td id=\"T_df944_row4_col3\" class=\"data row4 col3\" >66</td>\n",
+       "      <td id=\"T_df944_row4_col4\" class=\"data row4 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row4_col5\" class=\"data row4 col5\" >1</td>\n",
+       "      <td id=\"T_df944_row4_col6\" class=\"data row4 col6\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row5\" class=\"row_heading level0 row5\" >MP</th>\n",
-       "      <td id=\"T_82775_row5_col0\" class=\"data row5 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row5_col1\" class=\"data row5 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row5_col2\" class=\"data row5 col2\" >2</td>\n",
-       "      <td id=\"T_82775_row5_col3\" class=\"data row5 col3\" >14</td>\n",
-       "      <td id=\"T_82775_row5_col4\" class=\"data row5 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row5_col5\" class=\"data row5 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row5_col6\" class=\"data row5 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row5\" class=\"row_heading level0 row5\" >MP</th>\n",
+       "      <td id=\"T_df944_row5_col0\" class=\"data row5 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row5_col1\" class=\"data row5 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row5_col2\" class=\"data row5 col2\" >2</td>\n",
+       "      <td id=\"T_df944_row5_col3\" class=\"data row5 col3\" >14</td>\n",
+       "      <td id=\"T_df944_row5_col4\" class=\"data row5 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row5_col5\" class=\"data row5 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row5_col6\" class=\"data row5 col6\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row6\" class=\"row_heading level0 row6\" >S</th>\n",
-       "      <td id=\"T_82775_row6_col0\" class=\"data row6 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row6_col1\" class=\"data row6 col1\" >1</td>\n",
-       "      <td id=\"T_82775_row6_col2\" class=\"data row6 col2\" >3</td>\n",
-       "      <td id=\"T_82775_row6_col3\" class=\"data row6 col3\" >84</td>\n",
-       "      <td id=\"T_82775_row6_col4\" class=\"data row6 col4\" >12</td>\n",
-       "      <td id=\"T_82775_row6_col5\" class=\"data row6 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row6_col6\" class=\"data row6 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row6\" class=\"row_heading level0 row6\" >S</th>\n",
+       "      <td id=\"T_df944_row6_col0\" class=\"data row6 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row6_col1\" class=\"data row6 col1\" >1</td>\n",
+       "      <td id=\"T_df944_row6_col2\" class=\"data row6 col2\" >3</td>\n",
+       "      <td id=\"T_df944_row6_col3\" class=\"data row6 col3\" >84</td>\n",
+       "      <td id=\"T_df944_row6_col4\" class=\"data row6 col4\" >12</td>\n",
+       "      <td id=\"T_df944_row6_col5\" class=\"data row6 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row6_col6\" class=\"data row6 col6\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row7\" class=\"row_heading level0 row7\" >SD</th>\n",
-       "      <td id=\"T_82775_row7_col0\" class=\"data row7 col0\" >0</td>\n",
-       "      <td id=\"T_82775_row7_col1\" class=\"data row7 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row7_col2\" class=\"data row7 col2\" >1</td>\n",
-       "      <td id=\"T_82775_row7_col3\" class=\"data row7 col3\" >61</td>\n",
-       "      <td id=\"T_82775_row7_col4\" class=\"data row7 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row7_col5\" class=\"data row7 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row7_col6\" class=\"data row7 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row7\" class=\"row_heading level0 row7\" >SD</th>\n",
+       "      <td id=\"T_df944_row7_col0\" class=\"data row7 col0\" >0</td>\n",
+       "      <td id=\"T_df944_row7_col1\" class=\"data row7 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row7_col2\" class=\"data row7 col2\" >1</td>\n",
+       "      <td id=\"T_df944_row7_col3\" class=\"data row7 col3\" >61</td>\n",
+       "      <td id=\"T_df944_row7_col4\" class=\"data row7 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row7_col5\" class=\"data row7 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row7_col6\" class=\"data row7 col6\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_82775_level0_row8\" class=\"row_heading level0 row8\" >V</th>\n",
-       "      <td id=\"T_82775_row8_col0\" class=\"data row8 col0\" >1</td>\n",
-       "      <td id=\"T_82775_row8_col1\" class=\"data row8 col1\" >0</td>\n",
-       "      <td id=\"T_82775_row8_col2\" class=\"data row8 col2\" >0</td>\n",
-       "      <td id=\"T_82775_row8_col3\" class=\"data row8 col3\" >26</td>\n",
-       "      <td id=\"T_82775_row8_col4\" class=\"data row8 col4\" >0</td>\n",
-       "      <td id=\"T_82775_row8_col5\" class=\"data row8 col5\" >0</td>\n",
-       "      <td id=\"T_82775_row8_col6\" class=\"data row8 col6\" >0</td>\n",
+       "      <th id=\"T_df944_level0_row8\" class=\"row_heading level0 row8\" >V</th>\n",
+       "      <td id=\"T_df944_row8_col0\" class=\"data row8 col0\" >1</td>\n",
+       "      <td id=\"T_df944_row8_col1\" class=\"data row8 col1\" >0</td>\n",
+       "      <td id=\"T_df944_row8_col2\" class=\"data row8 col2\" >0</td>\n",
+       "      <td id=\"T_df944_row8_col3\" class=\"data row8 col3\" >26</td>\n",
+       "      <td id=\"T_df944_row8_col4\" class=\"data row8 col4\" >0</td>\n",
+       "      <td id=\"T_df944_row8_col5\" class=\"data row8 col5\" >0</td>\n",
+       "      <td id=\"T_df944_row8_col6\" class=\"data row8 col6\" >0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f974e8978b0>"
+       "<pandas.io.formats.style.Styler at 0x7fe454137e50>"
       ]
      },
      "execution_count": 6,
@@ -4789,8 +4789,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2022-01-19 23:40:00.345407\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:09.420790\n"
+      "Ended:  2022-01-22 13:09:04.314716\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:07.913936\n"
      ]
     }
    ],
