--- a/Nobel API_2_1-motivation.ipynb
+++ b/Nobel API_2_1-motivation.ipynb
@@ -10,7 +10,7 @@
     "# Nobel API 2.1 - check Wikidata and Nobel API motovation\n",
     "\n",
     "\n",
-    "* this [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API_2_1-motivation.ipynb\n",
+    "* this [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API_2_1-motivation.ipynb)\n",
     "  * see also This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API_2_1.ipynb)  using API 2.1 [api.nobelprize.org/2.1/laureates](https://api.nobelprize.org/2.1/laureates)\n",
     "\n",
     "\n",
