--- a/Nobel API_2_1-motivation.ipynb
+++ b/Nobel API_2_1-motivation.ipynb
@@ -7,7 +7,7 @@
     "**Work in progress**\n",
     "\n",
     "\n",
-    "# Nobel API 2.1 - check Wikidata and Nobel API motovation\n",
+    "# Nobel API 2.1 - check Wikidata and Nobel API motivation\n",
     "\n",
     "\n",
     "* this [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API_2_1-motivation.ipynb)\n",
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2022-01-25 10:05:01.763909\n"
+      "Last run:  2022-01-25 10:07:17.037663\n"
      ]
     }
    ],
