--- a/Nobel API_2_1-motivation.ipynb
+++ b/Nobel API_2_1-motivation.ipynb
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -10194,14 +10194,13 @@
        "974  för utvecklingen av halvledarheterostrukturer ...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.set_option('display.max_rows', None)\n",
-    "\n",
     "dftotPrize[{\"motivation.en\",\"motivation.se\",\"motivation.no\"}]"
    ]
   },
@@ -10263,6 +10262,68 @@
    ],
    "source": [
     "dftotPrize[\"motivation.no\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "341"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Max längd av strängen \n",
+    "dftotPrize[\"motivation.en\"].str.len().max()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "255.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Max längd av strängen \n",
+    "dftotPrize[\"motivation.se\"].str.len().max()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "262.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dftotPrize[\"motivation.no\"].str.len().max()\n"
    ]
   },
   {
