--- a/Nobel API_2_1-motivation.ipynb
+++ b/Nobel API_2_1-motivation.ipynb
@@ -10287,6 +10287,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -10324,6 +10331,98 @@
    ],
    "source": [
     "dftotPrize[\"motivation.no\"].str.len().max()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/1y/30t4cq1s7cvckdzb6rysqk800000gn/T/ipykernel_11921/1266593487.py:2: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
+      "  pd.set_option('display.max_colwidth',-1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "62     for their pioneering research in radio astrophysics: Ryle for his observations and inventions, in particular of the aperture synthesis technique, and Hewish for his decisive role in the discovery of pulsars                                                                                                                                       \n",
+       "220    for his work on serum therapy, especially its application against diphtheria, by which he has opened a new road in the domain of medical science and thereby placed in the hands of the physician a victorious weapon against illness and deaths                                                                                                     \n",
+       "261    for the theoretical discovery of a mechanism that contributes to our understanding of the origin of mass of subatomic particles, and which recently was confirmed through the discovery of the predicted fundamental particle, by the ATLAS and CMS experiments at CERN's Large Hadron Collider                                                      \n",
+       "269    in recognition of the fresh originality and true inspiration of his poetic production, which faithfully reflects the natural scenery and native spirit of his people, and, in addition, his significant work as a Proven&ccedil;al philologist                                                                                                       \n",
+       "328    not only in consideration of his deep learning and critical research, but above all as a tribute to the creative energy, freshness of style, and lyrical force which characterize his poetic masterpieces                                                                                                                                            \n",
+       "377    for their pioneering investigations concerning deep inelastic scattering of electrons on protons and bound neutrons, which have been of essential importance for the development of the quark model in particle physics                                                                                                                              \n",
+       "462    for their pioneering investigations concerning deep inelastic scattering of electrons on protons and bound neutrons, which have been of essential importance for the development of the quark model in particle physics                                                                                                                              \n",
+       "579    for his decisive contributions to elementary particle physics, in particular the discovery of a large number of resonance states, made possible through his development of the technique of using hydrogen bubble chamber and data analysis                                                                                                          \n",
+       "590    in recognition of her services to the advancement of chemistry by the discovery of the elements radium and polonium, by the isolation of radium and the study of the nature and compounds of this remarkable element                                                                                                                                 \n",
+       "600    for their pioneering research in radio astrophysics: Ryle for his observations and inventions, in particular of the aperture synthesis technique, and Hewish for his decisive role in the discovery of pulsars                                                                                                                                       \n",
+       "605    in appreciation of his many-sided literary activities, and especially of his dramatic works, which are distinguished by a wealth of imagination and by a poetic fancy, which reveals, sometimes in the guise of a fairy tale, a deep inspiration, while in a mysterious way they appeal to the readers' own feelings and stimulate their imaginations\n",
+       "691    as a tribute to the consummate artistry, permeated with idealism, which he has demonstrated during his long productive career as a lyric poet, dramatist, novelist and writer of world-renowned short stories                                                                                                                                        \n",
+       "711    for the theoretical discovery of a mechanism that contributes to our understanding of the origin of mass of subatomic particles, and which recently was confirmed through the discovery of the predicted fundamental particle, by the ATLAS and CMS experiments at CERN's Large Hadron Collider                                                      \n",
+       "726    because of his profoundly sensitive, fresh and beautiful verse, by which, with consummate skill, he has made his poetic thought, expressed in his own English words, a part of the literature of the West                                                                                                                                            \n",
+       "742    for their pioneering investigations concerning deep inelastic scattering of electrons on protons and bound neutrons, which have been of essential importance for the development of the quark model in particle physics                                                                                                                              \n",
+       "801    in recognition of his earnest search for truth, his penetrating power of thought, his wide range of vision, and the warmth and strength in presentation with which in his numerous works he has vindicated and developed an idealistic philosophy of life                                                                                            \n",
+       "896    for his role as co-founder of the Institut de droit international, initiator of the Conferences on International Private Law (Conférences de Droit international privé) at the Hague, and pioneer in the field of international legal relations                                                                                                      \n",
+       "914    for a creative poetic writing which illuminates man's condition in the cosmos and in present-day society, at the same time representing the great renewal of the traditions of Spanish poetry between the wars                                                                                                                                       \n",
+       "966    for its efforts to combat hunger, for its contribution to bettering conditions for peace in conflict-affected areas and for acting as a driving force in efforts to prevent the use of hunger as a weapon of war and conflict                                                                                                                        \n",
+       "Name: motivation.en, dtype: object"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Show strings > 200\n",
+    "pd.set_option('display.max_colwidth',-1)\n",
+    "dftotPrize[dftotPrize[\"motivation.en\"].str.len()>200][\"motivation.en\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/1y/30t4cq1s7cvckdzb6rysqk800000gn/T/ipykernel_11921/3823119309.py:1: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
+      "  pd.set_option('display.max_colwidth',-1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "220    för hans arbete rörande serumterapien och särskilt dess användning mot difteri, varigenom han brutit en ny väg inom den medicinska vetenskapens område och givit läkaren ett segerrikt vapen i kampen mot sjukdom och död                                      \n",
+       "261    ”för den teoretiska upptäckten av en mekanism som bidrar till förståelsen av massans ursprung hos subatomära partiklar, och som nyligen, genom upptäckten av den förutsagda fundamentala partikeln, bekräftats av ATLAS- och CMS-experimenten vid CERN:s accele\n",
+       "269    med avseende fäst å det ursprungsfriska, snillrika och sant konstnärliga i hans diktning, som troget avspeglar hans hembygds natur och folkliv, samt å hans betydelsefulla verksamhet som provençalsk filolog                                                  \n",
+       "328    i betraktande ej blott av hans rika lärdom och kritiska forskningar, utan främst som en hyllning åt den plastiska energi, den stilens friskhet och den lyriska styrka, som utmärka hans poetiska mästerverk                                                    \n",
+       "371    såsom ett erkännande av den stora förtjänst han inlagt genom sin undersökning och isolering av elementet fluor samt genom införandet av den efter honom uppkallade elektriska ugnen i vetenskapens tjänst                                                      \n",
+       "377    för deras banbrytande undersökningar rörande starkt inelastisk spridning av elektroner mot protoner och bundna neutroner, vilka haft en avgörande betydelse för utvecklingen av kvarkmodellen inom partikelfysiken                                             \n",
+       "462    för deras banbrytande undersökningar rörande starkt inelastisk spridning av elektroner mot protoner och bundna neutroner, vilka haft en avgörande betydelse för utvecklingen av kvarkmodellen inom partikelfysiken                                             \n",
+       "590    såsom ett erkännande för den förtjänst hon inlagt om kemiens utveckling genom upptäckten av grundämnena radium och polonium, genom karakteriserandet av radium och dess isolerande i metalliskt tillstånd samt genom sina undersökningar angående detta märkli \n",
+       "605    på grund av hans mångsidiga litterära verksamhet och särskilt hans dramatiska skapelser, som utmärka sig genom fantasirikedom och genom en poetisk idealitet, vilken, stundom i sagospelets slöjade form, röjer djup ingivelse samt på ett hemlighetsfull sätt \n",
+       "691    såsom hyllningsgärd åt den fulländade och av ideal uppfattning präglade konstnärlighet han ådagalagt under en lång och betydande verksamhet såsom lyriker, dramaturg, romanförfattare och diktare av världsberömda noveller                                    \n",
+       "711    ”för den teoretiska upptäckten av en mekanism som bidrar till förståelsen av massans ursprung hos subatomära partiklar, och som nyligen, genom upptäckten av den förutsagda fundamentala partikeln, bekräftats av ATLAS- och CMS-experimenten vid CERN:s accele\n",
+       "742    för deras banbrytande undersökningar rörande starkt inelastisk spridning av elektroner mot protoner och bundna neutroner, vilka haft en avgörande betydelse för utvecklingen av kvarkmodellen inom partikelfysiken                                             \n",
+       "798    för hans arbete rörande malarian, varigenom han uppdagat det sätt, varpå densamma vinner insteg i organismen, och därmed lagt grunden för betydelsefulla forskningar angående denna sjukdom och dess bekämpande                                                \n",
+       "866    såsom ett erkännande av hans utmärkta, jämväl under senare år ådagalagda förtjänster som författare och särskilt av hans om hög idealitet, konstnärlig fulländning samt sällspord förening av hjärtats och snillets egenskaper vittnande diktning              \n",
+       "Name: motivation.se, dtype: object"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_colwidth',-1)\n",
+    "dftotPrize[dftotPrize[\"motivation.se\"].str.len()>200][\"motivation.se\"]\n"
    ]
   },
   {
